--- a/_includes/login-error-password.html
+++ b/_includes/login-error-password.html
@@ -1,7 +1,8 @@
 ---
-    layout: single-form
+    layout: login
+    state: error
+    error-type: nothing-provided
     pagestates: login-register
 ---
-
 
 {% include login-form.html %}
