--- a/_scss/application.scss
+++ b/_scss/application.scss
@@ -1,2 +1,12 @@
 @import "partials/vars";
 @import "bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap.scss";
+
+
+
+// tmp
+
+.layout-single-form {
+  max-width: 40em;
+  margin: 0 auto;
+  height: auto;
+}
