--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,15 +7,22 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">{{site.name}}</a>
+      <a class="navbar-brand" href="/invoices.html">{{site.name}}</a>
     </div>
 
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li {% if page.url contains 'invoices.html'  %}class="active"{% endif %}><a href="/invoices.html">Invoices</a></li>
+        <li {% if page.url contains 'settings.html'  %}class="active"{% endif %}><a href="/settings.html">Settings</a></li>
       </ul>
+
+
+      <ul class="navbar-right">
+        <li>
+          <a href="/add-invoice.html" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-plus"></span>Add invoice</a>
+        </li>
+      </ul>
+
     </div><!--/.nav-collapse -->
   </div>
 </div>
