--- a/_layouts/single-form.html
+++ b/_layouts/single-form.html
@@ -4,11 +4,13 @@
       {% include head.html %}
     </head>
     <body class="{{ page.bodyclass }}">
-      <div class="container">
+
+      {% include header.html %}
+
+      <div class="layout-single-form">
         {{ content }}
       </div>
 
-      {% include footer.html %}
       {% include scripts.html %}
     </body>
 </html>
