Fix button in navbar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,12 +16,9 @@
         <li {% if page.url contains 'settings.html'  %}class="active"{% endif %}><a href="/settings.html">Settings</a></li>
       </ul>
 
-
-      <ul class="navbar-right">
-        <li>
-          <a href="/add-invoice.html" class="btn btn-success btn-sm"><span class="glyphicon glyphicon-plus"></span>Add invoice</a>
-        </li>
-      </ul>
+      <div class="navbar-right">
+        <a href="/add-invoice.html" class="btn btn-success navbar-btn"><span class="glyphicon glyphicon-plus"></span>Add invoice</a>
+      </div>
 
     </div><!--/.nav-collapse -->
   </div>
