--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,7 @@
 
       <div class="navbar-right">
         <a href="/add-invoice.html" class="btn btn-success navbar-btn"><span class="glyphicon glyphicon-plus"></span>Add invoice</a>
+        <a href="/index.html" class="btn btn-default navbar-btn">Sign out</a>
       </div>
 
     </div><!--/.nav-collapse -->
