--- a/_includes/login-form.html
+++ b/_includes/login-form.html
@@ -1,6 +1,7 @@
-<h1 class="col-sm8-4 col-md-offset-4">Invoices app</h1>
-<form action="/invoices.html" id="login-form" class="form-horizontal" role="form">
+<form action="/invoices.html" class="col-md-4 col-md-offset-4 form-horizontal" role="form">
   <fieldset>
+    <h1>Invoices app</h1>
+    <hr>
     {% if page.state == "error" %}
     <div class="alert alert-danger">
         <a href="#" class="close">&times;</a>
@@ -40,9 +41,6 @@
       </div>
     </div>
   </fieldset>
-
-  <div id="login-meta">
-    <p><a href="login-forgot-password.html">Help! Ik ben mijn wachtwoord vergeten</a></p>
-  </div>
-
+  <hr>
+  <p><a href="login-forgot-password.html">Help! Ik ben mijn wachtwoord vergeten</a></p>
 </form>
