--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,4 +5,4 @@
  <script src="/bower_components/respond/respond.min.js"></script>
 <![endif]-->
 
-<!-- @todo: add bootstrap -->
+<script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap.js" type="text/javascript"></script>
