--- a/_scss/application.scss
+++ b/_scss/application.scss
@@ -1,2 +1,8 @@
-@import "partials/vars";
+// Fix the font path temporarily
+@font-face {
+  font-family: 'Glyphicons Halflings';
+  src: url('/bower_components/bootstrap-sass/vendor/assets/fonts//bootstrap/glyphicons-halflings-regular.eot');
+  src: url('/bower_components/bootstrap-sass/vendor/assets/fonts//bootstrap/glyphicons-halflings-regular.eot?#iefix') format("embedded-opentype"), url('/bower_components/bootstrap-sass/vendor/assets/fonts//bootstrap/glyphicons-halflings-regular.woff') format("woff"), url('/bower_components/bootstrap-sass/vendor/assets/fonts//bootstrap/glyphicons-halflings-regular.ttf') format("truetype"), url('/bower_components/bootstrap-sass/vendor/assets/fonts//bootstrap/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format("svg");
+}
+
 @import "bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap.scss";
