--- a/_scss/application.scss
+++ b/_scss/application.scss
@@ -5,4 +5,21 @@
   src: url('/bower_components/bootstrap-sass/vendor/assets/fonts//bootstrap/glyphicons-halflings-regular.eot?#iefix') format("embedded-opentype"), url('/bower_components/bootstrap-sass/vendor/assets/fonts//bootstrap/glyphicons-halflings-regular.woff') format("woff"), url('/bower_components/bootstrap-sass/vendor/assets/fonts//bootstrap/glyphicons-halflings-regular.ttf') format("truetype"), url('/bower_components/bootstrap-sass/vendor/assets/fonts//bootstrap/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format("svg");
 }
 
+// other tmp classes
+
+.leader{
+  margin-top:0.8em;
+}
+.leader-large{
+  margin-top:1.6em;
+}
+.trailer{
+  margin-bottom:0.8em;
+}
+.trailer-large{
+  margin-bottom:1.6em;
+}
+
+
+
 @import "bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap.scss";
