add modernizr, update user settings

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,11 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/bower_components/jquery/jquery.min.js"><\/script>')</script>
 
+
+<!-- jquery plugins -->
+<script src="bower_components/jquery.extendedinput.js/js/jquery.extendedinput.js"></script>
+
+
 <!--[if (lt IE 9) & (!IEMobile)]>
  <script src="/bower_components/respond/respond.min.js"></script>
 <![endif]-->
