add invoice page

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,6 +4,10 @@
 
 <!-- jquery plugins -->
 <script src="bower_components/jquery.extendedinput.js/js/jquery.extendedinput.js"></script>
+<script src="js/plugins/jquery.multiadder.js"></script>
+
+<!-- own tiny script file -->
+<script src="js/app.js"></script>
 
 
 <!--[if (lt IE 9) & (!IEMobile)]>
