--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -11,6 +11,7 @@
       </div>
 
       {% include footer.html %}
+      {% include modals.html %}
       {% include scripts.html %}
     </body>
 </html>
