--- a/_includes/modals/add-client.html
+++ b/_includes/modals/add-client.html
@@ -4,23 +4,25 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title">Add client</h4>
+        <h4 class="modal-title">New client</h4>
       </div>
       <div class="modal-body has-sections">
 
-        <h3 class="section-header">Basic info</h3>
-
         <section>
 
-          <div class="form-group">
-            <label class="control-label">Naam<abbr title="Verplicht veld">*</abbr></label>
-            <input type="text" class="form-control">
+          <div class="form-group clearfix">
+            <label for="inputName" class="col-sm-2 control-label">
+              Name<abbr title="Required field">*</abbr>
+            </label>
+            <div class="col-sm-10">
+              <input id="inputName" type="text" class="form-control">
+            </div>
           </div>
 
-          <div class="form-group">
-            <label class="control-label">E-mail<abbr title="Verplicht veld">*</abbr></label>
-            <input type="email" class="form-control">
-          </div>
+          {% include forms/address.html %}
+          {% include forms/country.html %}
+          {% include forms/vat.html %}
+
 
         </section>
 
