--- a/_includes/modals/add-client.html
+++ b/_includes/modals/add-client.html
@@ -11,6 +11,13 @@
         <section>
 
           <div class="form-group clearfix">
+            <label for="clientId" class="col-sm-2 control-label">Client ID</label>
+            <div class="col-sm-10">
+              <input id="clientId" type="text" class="form-control" value="22" disabled>
+            </div>
+          </div>
+
+          <div class="form-group clearfix">
             <label for="inputName" class="col-sm-2 control-label">
               Name<abbr title="Required field">*</abbr>
             </label>
@@ -29,7 +36,7 @@
       </div><!-- .modal-body -->
       <div class="modal-footer">
         <a href="#" class="btn-link pull-left" data-dismiss="modal">Annuleren</a>
-        <a href="#" class="btn btn-success pull-right" data-dismiss="modal"><i class="glyphicon glyphicon-add"></i> Toevoegen</a>
+        <a href="#" class="btn btn-success pull-right" data-dismiss="modal"><span class="glyphicon glyphicon-plus"></span> Toevoegen</a>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
