--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>{{ page.title }}</title>
+<title>{{ page.title }} - {{ site.name }}</title>
 <meta name="viewport" content="width=device-width">
 
 <script src="bower_components/modernizr/modernizr.js"></script>
