--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li {% if page.url contains 'invoices.html'  %}class="active"{% endif %}><a href="/invoices.html">Invoices</a></li>
+        <li {% if page.url contains 'clients.html'  %}class="active"{% endif %}><a href="/clients.html">Clients</a></li>
         <li {% if page.url contains 'settings.html'  %}class="active"{% endif %}><a href="/settings.html">Settings</a></li>
       </ul>
 
