--- a/_includes/forms/address.html
+++ b/_includes/forms/address.html
@@ -28,10 +28,9 @@
 
     <div class="row trailer">
       <div class="col-xs-12">
-        <input class="form-control" id="addInvoiceAddressState" placeholder="State / Provence">
+        <input class="form-control" id="addInvoiceAddressState" placeholder="State/Province">
       </div>
     </div>
-
 
   </div>
 </div>
