add prototype nav

--- a/_layouts/login.html
+++ b/_layouts/login.html
@@ -9,6 +9,8 @@
         {{ content }}
       </div>
 
+      {% include globalnav.html %}
+      {% include modals.html %}
       {% include scripts.html %}
     </body>
 </html>
