--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 <script src="bower_components/modernizr/modernizr.js"></script>
 
 <link rel="stylesheet" href="/css/application.css">
+<link rel="stylesheet" href="/js/plugins/jquery.jekyll.globalnav/globalnav.css">
 
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
