--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,7 +4,9 @@
 
 <!-- jquery plugins -->
 <script src="bower_components/jquery.extendedinput.js/js/jquery.extendedinput.js"></script>
+<script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
 <script src="js/plugins/jquery.multiadder.js"></script>
+<script src="js/plugins/jquery.jekyll.globalnav/jquery.globalnav.js"></script>
 
 <!-- own tiny script file -->
 <script src="js/app.js"></script>
