--- a/_layouts/app.html
+++ b/_layouts/app.html
@@ -12,6 +12,7 @@
 
       {% include footer.html %}
       {% include modals.html %}
+      {% include globalnav.html %}
       {% include scripts.html %}
     </body>
 </html>
