--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,8 @@
       </div>
 
       {% include footer.html %}
+      {% include modals.html %}
+      {% include globalnav.html %}
       {% include scripts.html %}
     </body>
 </html>
