update login state, globalnav

--- a/_includes/globalnav.html
+++ b/_includes/globalnav.html
@@ -8,6 +8,17 @@
       <li><a href="add-invoice.html">Add invoice</a></li>
     </ul>
 
+    <h4>Clients</h4>
+    <ul class="unstyled">
+      <li><a href="clients.html">Overview</a></li>
+    </ul>
+
+    <h4>Settings</h4>
+    <ul class="unstyled">
+      <li><a href="settings.html">App settings</a></li>
+      <li><a href="user-settings.html">User settings</a></li>
+    </ul>
+
     <h4>Documentation</h4>
     <ul class="unstyled">
       <li><a href="styleguide.html">Styleguide</a></li>
