--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,9 @@
 <link rel="stylesheet" href="/css/application.css">
 <link rel="stylesheet" href="/js/plugins/jquery.jekyll.globalnav/globalnav.css">
 
+{% if page.environment == 'styleguide' %}
+  <link rel="stylesheet" href="css/styleguide.css">
+{% endif %}
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
