--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
 
 <link rel="stylesheet" href="/css/application.css">
 <link rel="stylesheet" href="/js/plugins/jquery.jekyll.globalnav/globalnav.css">
+<link rel="stylesheet" href="/js/plugins/nvd3-master/src/nv.d3.css">
 
 {% if page.environment == 'styleguide' %}
   <link rel="stylesheet" href="css/styleguide.css">
