stats placeholder for client income

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -13,9 +13,14 @@
 <script src="js/plugins/nvd3-master/nv.d3.js"></script>
 <script src="js/plugins/nvd3-master/src/tooltip.js"></script>
 <script src="js/plugins/nvd3-master/src/utils.js"></script>
+<script src="js/plugins/nvd3-master/src/models/legend.js"></script>
 <script src="js/plugins/nvd3-master/src/models/axis.js"></script>
 <script src="js/plugins/nvd3-master/src/models/discreteBar.js"></script>
 <script src="js/plugins/nvd3-master/src/models/discreteBarChart.js"></script>
+
+<script src="js/plugins/nvd3-master/src/models/multiBarHorizontal.js"></script>
+<script src="js/plugins/nvd3-master/src/models/multiBarHorizontalChart.js"></script>
+<script src="js/plugins/nvd3-master/examples/stream_layers.js"></script>
 
 <script src="js/stats.js"></script>
 
