Add some page headers - try to fix multi adder on invoice add

--- a/_includes/modals/add-client.html
+++ b/_includes/modals/add-client.html
@@ -36,7 +36,7 @@
       </div><!-- .modal-body -->
       <div class="modal-footer">
         <a href="#" class="btn-link pull-left" data-dismiss="modal">Cancel</a>
-        <a href="#" class="btn btn-success pull-right" data-dismiss="modal"><span class="glyphicon glyphicon-plus"></span> Add client</a>
+        <a href="#" class="btn btn-success pull-right" data-dismiss="modal"><span class="glyphicon glyphicon-plus-sign"></span> Add client</a>
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
