--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -27,9 +27,8 @@
 <!-- own tiny script file -->
 <script src="js/app.js"></script>
 
-
 <!--[if (lt IE 9) & (!IEMobile)]>
  <script src="/bower_components/respond/respond.min.js"></script>
 <![endif]-->
 
-<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap.js"></script>
