Only req 1 version of bootstrap

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -8,6 +8,20 @@
 <script src="js/plugins/jquery.multiadder.js"></script>
 <script src="js/plugins/jquery.jekyll.globalnav/jquery.globalnav.js"></script>
 
+<!-- bootstrap -->
+<script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/affix.js"></script>
+<script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/alert.js"></script>
+<script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/button.js"></script>
+<script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/carousel.js"></script>
+<script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/collapse.js"></script>
+<script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/dropdown.js"></script>
+<script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/modal.js"></script>
+<script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/popover.js"></script>
+<script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/scrollspy.js"></script>
+<script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/tab.js"></script>
+<script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
+<script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/transition.js"></script>
+
 <!-- statistics nvd3 -->
 <script src="js/plugins/nvd3-master/lib/d3.v3.js"></script>
 <script src="js/plugins/nvd3-master/nv.d3.js"></script>
@@ -30,5 +44,3 @@
 <!--[if (lt IE 9) & (!IEMobile)]>
  <script src="/bower_components/respond/respond.min.js"></script>
 <![endif]-->
-
-<script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap.js"></script>
