--- a/_includes/globalnav.html
+++ b/_includes/globalnav.html
@@ -11,6 +11,8 @@
     <h4>Clients</h4>
     <ul class="unstyled">
       <li><a href="clients.html">Overview</a></li>
+      <li><a href="add-client.html">Add client</a></li>
+      <li><a href="edit-client.html">Edit client</a></li>
     </ul>
 
     <h4>Settings</h4>
