--- a/_includes/forms/address.html
+++ b/_includes/forms/address.html
@@ -6,29 +6,29 @@
   <div class="col-sm-10">
     <div class="row trailer">
       <div class="col-xs-6">
-        <input class="form-control" id="addInvoiceAddressStreet" placeholder="Street">
+        <input class="form-control" id="addInvoiceAddressStreet" placeholder="Street" {% if page.state == "edit" %}value="Lange Leemstraat"{% endif %}>
       </div>
       <div class="col-xs-3">
-        <input class="form-control" id="addInvoiceAddressNumber" placeholder="Number">
+        <input class="form-control" id="addInvoiceAddressNumber" placeholder="Number" {% if page.state == "edit" %}value="388"{% endif %}>
       </div>
       <div class="col-xs-3">
-        <input class="form-control" id="addInvoiceAddressPo" placeholder="PO Box">
+        <input class="form-control" id="addInvoiceAddressPo" placeholder="PO Box" {% if page.state == "edit" %}value="2"{% endif %}>
       </div>
 
     </div>
 
     <div class="row trailer">
       <div class="col-xs-8">
-        <input class="form-control" id="addInvoiceAddressPlace" placeholder="City">
+        <input class="form-control" id="addInvoiceAddressPlace" placeholder="City" {% if page.state == "edit" %}value="Antwerp"{% endif %}>
       </div>
       <div class="col-xs-4">
-        <input class="form-control" id="addInvoiceAddressPostalCode" placeholder="Postal code">
+        <input class="form-control" id="addInvoiceAddressPostalCode" placeholder="Postal code" {% if page.state == "edit" %}value="2000"{% endif %}>
       </div>
     </div>
 
     <div class="row trailer">
       <div class="col-xs-12">
-        <input class="form-control" id="addInvoiceAddressState" placeholder="State/Province">
+        <input class="form-control" id="addInvoiceAddressState" placeholder="State/Province" {% if page.state == "edit" %}value="Antwerp"{% endif %}>
       </div>
     </div>
 
