--- a/_includes/modals/add-client.html
+++ b/_includes/modals/add-client.html
@@ -10,25 +10,7 @@
 
         <section>
 
-          <div class="form-group clearfix">
-            <label for="clientId" class="col-sm-2 control-label">Client ID</label>
-            <div class="col-sm-10">
-              <input id="clientId" type="text" class="form-control" value="22" disabled>
-            </div>
-          </div>
-
-          <div class="form-group clearfix">
-            <label for="inputName" class="col-sm-2 control-label">
-              Name<abbr title="Required field">*</abbr>
-            </label>
-            <div class="col-sm-10">
-              <input id="inputName" type="text" class="form-control">
-            </div>
-          </div>
-
-          {% include forms/address.html %}
-          {% include forms/country.html %}
-          {% include forms/vat.html %}
+          {% include forms/forms-add-client.html %}
 
 
         </section>
