--- a/_includes/globalnav.html
+++ b/_includes/globalnav.html
@@ -21,6 +21,11 @@
       <li><a href="user-settings.html">User settings</a></li>
     </ul>
 
+    <h4>Statistics</h4>
+    <ul class="unstyled">
+      <li><a href="stats.html">Overview</a></li>
+    </ul>
+
     <h4>Documentation</h4>
     <ul class="unstyled">
       <li><a href="styleguide.html">Styleguide</a></li>
