--- a/_includes/globalnav.html
+++ b/_includes/globalnav.html
@@ -6,6 +6,7 @@
     <ul class="unstyled">
       <li><a href="invoices.html">Overview</a></li>
       <li><a href="add-invoice.html">Add invoice</a></li>
+      <li><a href="edit-invoice.html">Edit invoice</a></li>
     </ul>
 
     <h4>Clients</h4>
