account numbers pattern

--- a/_includes/forms/invoice-content.html
+++ b/_includes/forms/invoice-content.html
@@ -71,18 +71,34 @@
       <div class="row">
         <div class="col-sm-4 pull-right">
           <div class="trailer">
+
             <div class="col-sm-6">Subtotal</div>
-            <div class="col-sm-6">€1200</div>
+            <div class="col-sm-6">
+              <div class="account-numbers clearfix">
+                  <span class="account-numbers-currency">€</span>
+                  <span class="account-numbers-value">1200,00</span>
+              </div>
+            </div>
           </div>
           <div class="trailer clearfix">
             <div class="col-sm-6">VAT total:</div>
-            <div class="col-sm-6">€252</div>
+            <div class="col-sm-6">
+              <div class="account-numbers clearfix">
+                  <span class="account-numbers-currency">€</span>
+                  <span class="account-numbers-value">252,00</span>
+              </div>
+            </div>
           </div>
           <hr />
           <div class="trailer clearfix">
             <b>
               <div class="col-sm-6">Total:</div>
-              <div class="col-sm-6">€1452</div>
+              <div class="col-sm-6">
+                <div class="account-numbers clearfix">
+                    <span class="account-numbers-currency">€</span>
+                    <span class="account-numbers-value">1452,00</span>
+                </div>
+              </div>
             </b>
           </div>
         </div>
@@ -159,16 +175,31 @@
         <div class="col-sm-4 pull-right">
           <div class="trailer">
             <div class="col-sm-6">Subtotal</div>
-            <div class="col-sm-6">€1200</div>
+            <div class="col-sm-6">
+              <div class="account-numbers clearfix">
+                  <span class="account-numbers-currency">€</span>
+                  <span class="account-numbers-value">1200,00</span>
+              </div>
+            </div>
           </div>
           <div class="trailer clearfix">
             <div class="col-sm-6">VAT total:</div>
-            <div class="col-sm-6">€252</div>
+            <div class="col-sm-6">
+              <div class="account-numbers clearfix">
+                  <span class="account-numbers-currency">€</span>
+                  <span class="account-numbers-value">252,00</span>
+              </div>
+            </div>
           </div>
           <hr />
           <div class="trailer clearfix"><b>
             <div class="col-sm-6">Total:</div>
-            <div class="col-sm-6">€1452</div>
+            <div class="col-sm-6">
+              <div class="account-numbers clearfix">
+                  <span class="account-numbers-currency">€</span>
+                  <span class="account-numbers-value">1452,00</span>
+              </div>
+            </div>
           </b></div>
 
         </div>
