--- a/_scss/application.scss
+++ b/_scss/application.scss
@@ -8,6 +8,7 @@ $dropdown-caret-color: $gray-darker;
 
 // extensions
 @import "extensions/sortable-table";
+@import "extensions/account-numbers";
 
 
 // Page header
