--- a/_scss/_tmp.scss
+++ b/_scss/_tmp.scss
@@ -1,4 +1,5 @@
 // Fix the font path temporarily
+// -------------------------
 @font-face {
   font-family: 'Glyphicons Halflings';
   src: url('/bower_components/bootstrap-sass/vendor/assets/fonts//bootstrap/glyphicons-halflings-regular.eot');
@@ -6,7 +7,7 @@
 }
 
 // other tmp classes
-
+// -------------------------
 .leader{
   margin-top:0.8em;
 }
@@ -22,6 +23,7 @@
 
 
 // charting
+// -------------------------
 .chart{
   svg{
     height:400px;
@@ -36,4 +38,20 @@
   .nv-legend{
     display: none;
   }
+}
+
+// Page header
+// -------------------------
+
+.page-header {
+  margin-top: 0;
+  h1 {
+    margin-top: 0;
+  }
+}
+
+// fix popover inside navbar narrow screens
+// -------------------------
+.navbar-collapse.in {
+  overflow-y: visible;
 }
