--- a/_scss/application.scss
+++ b/_scss/application.scss
@@ -1,22 +1,12 @@
-// tmp fixes
-@import "tmp";
-
 // full bootstrap import
 @import "bower_components/bootstrap-sass/vendor/assets/stylesheets/bootstrap.scss";
 
+// tmp fixes
+@import "tmp";
+
+// vars needed for extensions
 $dropdown-caret-color: $gray-darker;
 
 // extensions
 @import "extensions/sortable-table";
 @import "extensions/account-numbers";
-
-
-// Page header
-// -------------------------
-
-.page-header {
-  margin-top: 0;
-  h1 {
-    margin-top: 0;
-  }
-}
