--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/invoices.html">{{site.name}}</a>
+      <a class="navbar-brand" href="/invoices.html">
+        <img src="/images/logo.svg" alt="{{site.name}}">
+      </a>
     </div>
 
     <div class="navbar-collapse collapse">
