--- a/_includes/login-form.html
+++ b/_includes/login-form.html
@@ -1,6 +1,7 @@
 <form action="/invoices.html" class="col-md-4 col-md-offset-4 form-horizontal" role="form">
+
   <fieldset>
-    <h1>Invoices app</h1>
+    <img src="/images/logo.svg">
     <hr>
     {% if page.state == "error" %}
     <div class="alert alert-danger">
