--- a/_scss/_custom-vars.scss
+++ b/_scss/_custom-vars.scss
@@ -1,1 +1,33 @@
 // add the variables you want to override in bootstrap
+// --------------
+
+// Grays
+// -------------------------
+
+$gray-darker:            #000;
+$gray-dark:              #3D4344;
+$gray:                   #849899;
+$gray-light:             #B6CBCE;
+$gray-lighter:           #E2ECED;
+
+// Brand colors
+// -------------------------
+
+$brand-primary:         #068BC6;
+$brand-secondary:       #00688C;
+$brand-secondary:       #6CE0FF;
+
+$brand-success:         #05AA8B;
+$brand-warning:         $brand-secondary;
+$brand-danger:          #B70071;
+$brand-info:            $brand-secondary;
+
+// Scaffolding
+// -------------------------
+
+$body-bg:               #fff;
+$text-color:            $gray-dark;
+
+
+$link-color:            $brand-primary;
+$link-hover-color:      darken($link-color, 15%);
