update style guide colors

--- a/_scss/_custom-vars.scss
+++ b/_scss/_custom-vars.scss
@@ -15,7 +15,7 @@ $gray-lighter:           #E2ECED;
 
 $brand-primary:         #068BC6;
 $brand-secondary:       #00688C;
-$brand-secondary:       #6CE0FF;
+$brand-tertiary:        #6CE0FF;
 
 $brand-success:         #05AA8B;
 $brand-warning:         $brand-secondary;
