--- a/_includes/login-form.html
+++ b/_includes/login-form.html
@@ -1,47 +1,51 @@
-<form action="/invoices.html" class="col-md-4 col-md-offset-4 form-horizontal" role="form">
+<div class="vert-center-wrap">
+  <div class="vert-center">
+    <form id="login-form" action="/invoices.html" class="col-md-4 col-md-offset-4 form-horizontal" role="form">
 
-  <fieldset>
-    <img src="/images/logo.svg">
-    <hr>
-    {% if page.state == "error" %}
-    <div class="alert alert-danger">
-        <a href="#" class="close">&times;</a>
-        {% if page.error-type == "nothing-provided" %}
-          Geef a.u.b. een gebruikersnaam en wachtwoord in.
-        {% endif %}
-        {% if page.error-type == "wrong-password" %}
-          Uw gebruikersnaam of wachtwoord is niet correct. Probeer het a.u.b. opnieuw. Bent u uw gebruikersnaam of wachtwoord vergeten? <a href="login-forgot-password.html">Klik hier om uw wachtwoord te resetten</a>.
-        {% endif %}
-    </div>
-    {% endif %}
-
-    <div class="row form-group {% if page.state == "error" %}error{% endif %}">
-      <label class="control-label col-sm-4" for="login-user">Gebruikersnaam</label>
-      <div class="col-sm-8">
-        <input type="text" class="form-control" id="login-user" placeholder="Jouw gebruikersnaam">
-      </div>
-    </div>
-    <div class="row form-group {% if page.state == "error" %}error{% endif %}">
-      <label class="control-label col-sm-4" for="login-password">Wachtwoord</label>
-      <div class="col-sm-8">
-        <input class="form-control" type="password" id="login-password" placeholder="Jouw wachtwoord">
-      </div>
-    </div>
-    <div class="row form-group">
-      <div class="col-sm-8 col-sm-offset-4">
-        <div class="checkbox">
-          <label for="remember-password">
-            <input type="checkbox" id="remember-password"> Herinner mij
-          </label>
+      <fieldset>
+        <img src="/images/logo.svg" class="img-responsive">
+        <hr>
+        {% if page.state == "error" %}
+        <div class="alert alert-danger">
+            <a href="#" class="close">&times;</a>
+            {% if page.error-type == "nothing-provided" %}
+              Geef a.u.b. een gebruikersnaam en wachtwoord in.
+            {% endif %}
+            {% if page.error-type == "wrong-password" %}
+              Uw gebruikersnaam of wachtwoord is niet correct. Probeer het a.u.b. opnieuw. Bent u uw gebruikersnaam of wachtwoord vergeten? <a href="login-forgot-password.html">Klik hier om uw wachtwoord te resetten</a>.
+            {% endif %}
         </div>
-      </div>
-    </div>
-    <div class="row form-group">
-      <div class="col-sm-8 col-sm-offset-4">
-        <button class="btn btn-primary">Aanmelden</button>
-      </div>
-    </div>
-  </fieldset>
-  <hr>
-  <p><a href="login-forgot-password.html">Help! Ik ben mijn wachtwoord vergeten</a></p>
-</form>
+        {% endif %}
+
+        <div class="row form-group {% if page.state == "error" %}error{% endif %}">
+          <label class="control-label col-sm-4" for="login-user">Gebruikersnaam</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="login-user" placeholder="Jouw gebruikersnaam">
+          </div>
+        </div>
+        <div class="row form-group {% if page.state == "error" %}error{% endif %}">
+          <label class="control-label col-sm-4" for="login-password">Wachtwoord</label>
+          <div class="col-sm-8">
+            <input class="form-control" type="password" id="login-password" placeholder="Jouw wachtwoord">
+          </div>
+        </div>
+        <div class="row form-group">
+          <div class="col-sm-8 col-sm-offset-4">
+            <div class="checkbox">
+              <label for="remember-password">
+                <input type="checkbox" id="remember-password"> Herinner mij
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="row form-group">
+          <div class="col-sm-8 col-sm-offset-4">
+            <button class="btn btn-primary">Aanmelden</button>
+          </div>
+        </div>
+      </fieldset>
+      <hr>
+      <p><a href="login-forgot-password.html">Help! Ik ben mijn wachtwoord vergeten</a></p>
+    </form>
+  </div>
+</div>
