--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
 
 <script src="bower_components/modernizr/modernizr.js"></script>
 
+{% include grumpicon.html %}
 <link rel="stylesheet" href="/css/application.css">
 <link rel="stylesheet" href="/js/plugins/jquery.jekyll.globalnav/globalnav.css">
 <link rel="stylesheet" href="/js/plugins/nvd3-master/src/nv.d3.css">
