--- a/_includes/patterns/custom/custom-icons.html
+++ b/_includes/patterns/custom/custom-icons.html
@@ -1,26 +1,26 @@
 <!-- .icon-delete -->
-<div class="icon-delete" style="width: 16px; height: 16px"></div>
+<div class="icon icon-delete"></div>
 <hr>
 <!-- .icon-edit -->
-<div class="icon-edit" style="width: 16px; height: 16px"></div>
+<div class="icon icon-edit"></div>
 <hr>
 <!-- .icon-list -->
-<div class="icon-list" style="width: 16px; height: 16px"></div>
+<div class="icon icon-list"></div>
 <hr>
 <!-- .icon-plus -->
-<div class="icon-plus" style="width: 16px; height: 16px"></div>
+<div class="icon icon-plus"></div>
 <hr>
 <!-- .icon-warning -->
-<div class="icon-warning" style="width: 16px; height: 16px"></div><hr>
+<div class="icon icon-warning"></div><hr>
 <!-- .icon-settings -->
-<div class="icon-settings" style="width: 48px; height: 48px"></div>
+<div class="icon-large icon-settings"></div>
 <hr>
 <!-- .icon-stats -->
-<div class="icon-stats" style="width: 48px; height: 48px"></div>
+<div class="icon-large icon-stats"></div>
 <hr>
 <!-- .icon-users -->
-<div class="icon-users" style="width: 48px; height: 48px"></div>
+<div class="icon-large icon-users"></div>
 <hr>
 <!-- .icon-invoices -->
-<div class="icon-invoices" style="width: 48px; height: 48px"></div>
+<div class="icon-large icon-invoices"></div>
 <hr>
