--- a/_scss/_identity.scss
+++ b/_scss/_identity.scss
@@ -1,17 +1,29 @@
 // custom font
 // --------------
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,700);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700);
 
-@mixin webfont($weight:400){
+
+@mixin webfont-regular($weight:400){
   // currently available weights
   // 400: normal
   // 700: bold
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
   font-weight:$weight;
 }
+@mixin webfont-headings($weight:400){
+  // currently available weights
+  // 400: normal
+  // 700: bold
+  font-family: 'Roboto Condensed', Helvetica, Arial, sans-serif;
+  font-weight:$weight;
+}
 
+body{
+  @include webfont-regular(400);
+}
 h1, h2, h3, h4{
-  @include webfont(700);
+  @include webfont-headings(400);
 }
 
 // navigation / logo
