--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
         <li {% if page.url contains 'invoices.html'  %}class="active"{% endif %}><a href="/invoices.html">Invoices</a></li>
         <li {% if page.url contains 'clients.html'  %}class="active"{% endif %}><a href="/clients.html">Clients</a></li>
         <li {% if page.url contains 'stats.html'  %}class="active"{% endif %}><a href="/stats.html">Statistics</a></li>
-        <li {% if page.url contains 'settings.html'  %}class="active"{% endif %}><a href="/settings.html">Settings</a></li>
+        <li {% if page.url contains 'app-settings.html'  %}class="active"{% endif %}><a href="/app-settings.html">Settings</a></li>
       </ul>
 
       <div class="navbar-right">
