--- a/_scss/_identity.scss
+++ b/_scss/_identity.scss
@@ -48,7 +48,7 @@ h1, h2, h3, h4{
     color:$very-light;
     text-decoration: underline;
   }
-  .glyphicon{
+  .icon{
     font-size: 2em;
     float: left;
     margin:0.1em 0.5em 0.1em 0;
