--- a/_scss/application.scss
+++ b/_scss/application.scss
@@ -17,3 +17,4 @@ $dropdown-caret-color: $gray-darker;
 // screen specific
 @import "screens/login";
 @import "screens/stats";
+@import "screens/mobile";
