--- a/_includes/globalnav.html
+++ b/_includes/globalnav.html
@@ -30,6 +30,7 @@
     <h4>Documentation</h4>
     <ul class="unstyled">
       <li><a href="styleguide.html">Styleguide</a></li>
+      <li><a href="mobile.html">Mobile</a></li>
     </ul>
 
   </div>
