--- a/_scss/screens/_login.scss
+++ b/_scss/screens/_login.scss
@@ -8,3 +8,11 @@
 #login-form{
   text-align: left;
 }
+
+@media all and (min-width:993px) {
+  #login-form{
+    max-width: 400px;
+    margin: 0 auto;
+    float: none;
+  }
+}
