--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,29 +12,30 @@
       </a>
     </div>
 
-    <div class="navbar-collapse collapse">
+    <div class="navbar-left navbar-collapse">
       <ul class="nav navbar-nav">
         <li {% if page.url contains 'invoices.html'  %}class="active"{% endif %}><a href="/invoices.html">Invoices</a></li>
         <li {% if page.url contains 'clients.html'  %}class="active"{% endif %}><a href="/clients.html">Clients</a></li>
         <li {% if page.url contains 'stats.html'  %}class="active"{% endif %}><a href="/stats.html">Statistics</a></li>
         <li {% if page.url contains 'app-settings.html'  %}class="active"{% endif %}><a href="/app-settings.html">Settings</a></li>
       </ul>
+    </div>
 
-      <div class="navbar-right">
-        <a href="/add-invoice.html" class="btn btn-success navbar-btn"><span class="glyphicon glyphicon-plus-sign"></span> Add invoice</a>
-
-        <div class="btn-group navbar-btn dropdown">
-          <a class="dropdown-toggle btn btn-default" data-toggle="dropdown" href="#">
-            <span>John Doe</span>
+    <div class="navbar-right navbar-collapse">
+      <ul class="nav navbar-nav bordered">
+        <li class="dropdown open">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="John Doe">
+            <i class="glyphicon glyphicon-user"></i>
+            John Doe
             <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
             <li><a href="/user-settings.html">User settings</a></li>
             <li><a href="/index.html">Sign out</a></li>
           </ul>
-        </div><!-- btn group -->
-      </div> <!-- navbar right -->
+        </li>
+      </ul>
+    </div>
 
-    </div><!--/.nav-collapse -->
   </div>
 </div>
