--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,7 @@
 
     <div class="navbar-right navbar-collapse">
       <ul class="nav navbar-nav bordered">
-        <li class="dropdown open">
+        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="John Doe">
             <i class="glyphicon glyphicon-user"></i>
             John Doe
