--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -22,19 +22,9 @@
 <script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/tooltip.js"></script>
 <script src="/bower_components/bootstrap-sass/vendor/assets/javascripts/bootstrap/transition.js"></script>
 
-<!-- statistics nvd3 -->
-<script src="js/plugins/nvd3-master/lib/d3.v3.js"></script>
-<script src="js/plugins/nvd3-master/nv.d3.js"></script>
-<script src="js/plugins/nvd3-master/src/tooltip.js"></script>
-<script src="js/plugins/nvd3-master/src/utils.js"></script>
-<script src="js/plugins/nvd3-master/src/models/legend.js"></script>
-<script src="js/plugins/nvd3-master/src/models/axis.js"></script>
-<script src="js/plugins/nvd3-master/src/models/discreteBar.js"></script>
-<script src="js/plugins/nvd3-master/src/models/discreteBarChart.js"></script>
-
-<script src="js/plugins/nvd3-master/src/models/multiBarHorizontal.js"></script>
-<script src="js/plugins/nvd3-master/src/models/multiBarHorizontalChart.js"></script>
-<script src="js/plugins/nvd3-master/examples/stream_layers.js"></script>
+<!-- Statistics nvd3 -->
+<script src="/bower_components/d3/d3.js" type="text/javascript"></script>
+<script src="/bower_components/nvd3/nv.d3.js"></script>
 
 <script src="js/stats.js"></script>
 
