Collapse navbars by default

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
       </a>
     </div>
 
-    <div class="navbar-left navbar-collapse">
+    <div class="navbar-left navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li {% if page.url contains 'invoices.html'  %}class="active"{% endif %}><a href="/invoices.html">Invoices</a></li>
         <li {% if page.url contains 'clients.html'  %}class="active"{% endif %}><a href="/clients.html">Clients</a></li>
@@ -21,7 +21,7 @@
       </ul>
     </div>
 
-    <div class="navbar-right navbar-collapse">
+    <div class="navbar-right navbar-collapse collapse">
       <ul class="nav navbar-nav bordered">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="John Doe">
