--- a/_includes/patterns/radio-buttons-inline.html
+++ b/_includes/patterns/radio-buttons-inline.html
@@ -1,12 +1,12 @@
 <label class="control-label">Form label</label>
 <div class="form-group">
-  <label class="checkbox-inline">
-    <input type="checkbox"> Optie A
+  <label class="radio-inline">
+    <input type="radio"> Optie A
   </label>
-  <label class="checkbox-inline">
-    <input type="checkbox"> Optie B
+  <label class="radio-inline">
+    <input type="radio"> Optie B
   </label>
-  <label class="checkbox-inline">
-    <input type="checkbox"> Optie C
+  <label class="radio-inline">
+    <input type="radio"> Optie C
   </label>
 </div>
