--- a/_includes/patterns/simpleform.html
+++ b/_includes/patterns/simpleform.html
@@ -2,7 +2,7 @@
 <form>
   <div class="form-group">
     <label class="control-label">Field name</label>
-    <input type="text" class="form-control">
+    <input type="text" class="form-control" placeholder="Enter a value...">
   </div>
   <div class="form-group">
     <label class="control-label">Field name</label>
