--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 <script src="bower_components/modernizr/modernizr.js"></script>
 
 {% include grumpicon.html %}
-<link rel="stylesheet" href="/css/application.css">
+<link rel="stylesheet" href="/css/skin.css">
 <link rel="stylesheet" href="/js/plugins/jquery.jekyll.globalnav/globalnav.css">
 <link rel="stylesheet" href="/bower_components/nvd3/nv.d3.css">
 
