--- a/_includes/patterns/alert-error.html
+++ b/_includes/patterns/alert-error.html
@@ -1,4 +1,4 @@
-<div class="alert alert-default">
+<div class="alert alert-danger">
     <button class="close">&times;</button>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.
 </div>
