Improve panel styles
Signed-off-by: Johan Ronsse <wolf@wolfslittlestore.be>

--- a/_scss/_all-imports.scss
+++ b/_scss/_all-imports.scss
@@ -49,6 +49,7 @@
 @import "components/custom/alerts";
 @import "components/custom/navbar";
 @import "components/custom/glyphicons";
+@import "components/custom/panels";
 @import "components/custom/utilities";
 @import "components/custom/type";
 
