--- a/_includes/login-form.html
+++ b/_includes/login-form.html
@@ -1,10 +1,10 @@
-<div class="vert-center-wrap">
-  <div class="vert-center">
-    <form id="login-form" action="/invoices.html" class="col-md-4 col-md-offset-4 form-horizontal" role="form">
-
+<div class="login">
+  <div class="layout-single-form">
+    <form id="login-form" action="/invoices.html" class="form-horizontal" role="form">
+      <div id="logo">
+        <img src="/images/logo.svg">
+      </div>
       <fieldset>
-        <img src="/images/logo.svg" class="img-responsive">
-        <hr>
         {% if page.state == "error" %}
         <div class="alert alert-danger">
             <a href="#" class="close">&times;</a>
@@ -44,8 +44,9 @@
           </div>
         </div>
       </fieldset>
-      <hr>
-      <p><a href="login-forgot-password.html">Help! Ik ben mijn wachtwoord vergeten</a></p>
+      <div id="login-meta">
+        <p><a href="login-forgot-password.html">Help! Ik ben mijn wachtwoord vergeten</a></p>
+      </div>
     </form>
   </div>
 </div>
