Start implementing design

--- a/_includes/components/bootstrap/component-colors.html
+++ b/_includes/components/bootstrap/component-colors.html
@@ -55,8 +55,8 @@
           <p>$brand-info: #00688C</p>
         </div>
         <div>
-          <div class="color-example" style="background: #068BC6;"></div>
-          <p>$brand-secondary: #068BC6</p>
+          <div class="color-example" style="background: #00688C;"></div>
+          <p>$brand-secondary: #00688c</p>
         </div>
         <div>
           <div class="color-example" style="background: #6CE0FF;"></div>
