--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default navbar-static-top" role="navigation">
+<div class="navbar navbar-inverse navbar-static-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/invoices.html">
-        <img src="/images/logo.svg" alt="{{site.name}}">
+        <img src="/images/logo-icon.svg" alt="{{site.name}}">
       </a>
     </div>
 
@@ -23,6 +23,17 @@
 
     <div class="navbar-right navbar-collapse collapse">
       <ul class="nav navbar-nav bordered">
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Instellingen">
+            <i class="glyphicon glyphicon-cog"></i>
+            Instellingen
+            <b class="caret"></b>
+          </a>
+          <ul class="dropdown-menu">
+            <li><a href="/user-settings.html">User settings</a></li>
+            <li><a href="/index.html">Sign out</a></li>
+          </ul>
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="John Doe">
             <i class="glyphicon glyphicon-user"></i>
