Implement grunt icon flow

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,8 +30,7 @@
             <b class="caret"></b>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="/user-settings.html">User settings</a></li>
-            <li><a href="/index.html">Sign out</a></li>
+            <li><a href="/app-settings.html">Settings</a></li>
           </ul>
         </li>
         <li class="dropdown">
