--- a/scss/_vars-custom.scss
+++ b/scss/_vars-custom.scss
@@ -1,6 +1,8 @@
 // add the variables you want to override in bootstrap
 // --------------
 
+$icon-font-path: "/fonts";
+
 // Grays
 // -------------------------
 
